@@ -52,6 +52,8 @@ o added libc replacements qgetservent, qgetservbyname, qgetservbyport along
 32. added tcpbind.c, tcpopen.c, udpopen.c, qdirname.c, isnum.c
 - 17/05/2022
 33. base/cdb.c: added comment on mmap return value
+- 20/06/2022
+34. base/commands.c: set errno=0 for EOF
 
 * Sat Jul 17 2021 18:14:37 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1-1.1%{?dist}
 Release 1.1 Start 14/02/2021
